Added the ability to add training times and update said value. Added the day the training was logged into the system to keep track.